@@ -7,6 +7,7 @@ Nagios 3.x Change Log
 -------------------
 * Changed embedded audio MIME types in CGIs to "application/wav"
 * Fixed bug in sample helloworld NEB module
+* Modified p1.pl to allow for multiline-line output of Perl plugins under embedded Perl interpreter (epn)
 
 
 
